OPENJPA-1868: Miscellaneous FindBugs suggested performance improvements for openjpa-jdbc.
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@1030156 13f79535-47bb-0310-9956-ffa450edef68