@@ -146,8 +146,7 @@ public class JDBCFetchConfigurationImpl
             && mode != EagerFetchModes.EAGER_NONE
             && mode != EagerFetchModes.EAGER_JOIN
             && mode != EagerFetchModes.EAGER_PARALLEL)
-            throw new IllegalArgumentException(
-                _loc.get("bad-fetch-mode", new Integer(mode)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-fetch-mode", Integer.valueOf(mode)).getMessage());
 
         if (mode == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -177,8 +176,7 @@ public class JDBCFetchConfigurationImpl
             && mode != EagerFetchModes.EAGER_NONE
             && mode != EagerFetchModes.EAGER_JOIN
             && mode != EagerFetchModes.EAGER_PARALLEL)
-            throw new IllegalArgumentException(
-                _loc.get("bad-fetch-mode", new Integer(mode)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-fetch-mode", Integer.valueOf(mode)).getMessage());
 
         if (mode == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -199,8 +197,7 @@ public class JDBCFetchConfigurationImpl
             && type != ResultSet.TYPE_FORWARD_ONLY
             && type != ResultSet.TYPE_SCROLL_INSENSITIVE
             && type != ResultSet.TYPE_SCROLL_SENSITIVE)
-            throw new IllegalArgumentException(_loc.get("bad-resultset-type",
-                new Integer(type)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-resultset-type", Integer.valueOf(type)).getMessage());
 
         if (type == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -220,8 +217,7 @@ public class JDBCFetchConfigurationImpl
             && direction != ResultSet.FETCH_FORWARD
             && direction != ResultSet.FETCH_REVERSE
             && direction != ResultSet.FETCH_UNKNOWN)
-            throw new IllegalArgumentException(_loc.get("bad-fetch-direction",
-                new Integer(direction)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-fetch-direction", Integer.valueOf(direction)).getMessage());
 
         if (direction == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -241,8 +237,7 @@ public class JDBCFetchConfigurationImpl
             && size != LRSSizes.SIZE_QUERY
             && size != LRSSizes.SIZE_LAST
             && size != LRSSizes.SIZE_UNKNOWN)
-            throw new IllegalArgumentException(
-                _loc.get("bad-lrs-size", new Integer(size)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-lrs-size", Integer.valueOf(size)).getMessage());
 
         if (size == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -262,8 +257,7 @@ public class JDBCFetchConfigurationImpl
             && syntax != JoinSyntaxes.SYNTAX_SQL92
             && syntax != JoinSyntaxes.SYNTAX_TRADITIONAL
             && syntax != JoinSyntaxes.SYNTAX_DATABASE)
-            throw new IllegalArgumentException(
-                _loc.get("bad-join-syntax", new Integer(syntax)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-join-syntax", Integer.valueOf(syntax)).getMessage());
 
         if (syntax == DEFAULT) {
             JDBCConfiguration conf = getJDBCConfiguration();
@@ -383,8 +377,7 @@ public class JDBCFetchConfigurationImpl
             && level != Connection.TRANSACTION_READ_COMMITTED
             && level != Connection.TRANSACTION_REPEATABLE_READ
             && level != Connection.TRANSACTION_SERIALIZABLE)
-            throw new IllegalArgumentException(
-                _loc.get("bad-level", new Integer(level)).getMessage());
+            throw new IllegalArgumentException(_loc.get("bad-level", Integer.valueOf(level)).getMessage());
 
         if (level == DEFAULT)
             _state.isolationLevel = -1;
