@@ -415,7 +415,7 @@ public class Column
                 break;
             case JavaTypes.CHAR:
             case JavaTypes.CHAR_OBJ:
-                _default = new Character(_defaultStr.charAt(0));
+                _default = Character.valueOf(_defaultStr.charAt(0));
                 break;
             case JavaTypes.DOUBLE:
             case JavaTypes.DOUBLE_OBJ:
